// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Block /> with additional className matches its snapshot 1`] = `
<div
  className="y-block TEST_CLASSNAME"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with bottom spacing matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        margin-bottom: 2rem;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with default options matches its snapshot 1`] = `
<div
  className="y-block"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with ellipsis matches its snapshot 1`] = `
<div
  className="y-block"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with horizontal padding matches its snapshot 1`] = `
<div
  className="y-block"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          padding-left: 1.2rem;
          padding-right: 1.2rem;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with negative push matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        margin-top: -0.2rem;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with padding matches its snapshot 1`] = `
<div
  className="y-block"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          padding-bottom: 0.8rem;
          padding-left: 0.8rem;
          padding-right: 0.8rem;
          padding-top: 0.8rem;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with positive push matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        padding-top: 0.3rem;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with secondary textColor matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        color: #495361;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with textAlign center matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        text-align: center;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with textAlign right matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        text-align: right;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with top spacing matches its snapshot 1`] = `
<div
  className=
      y-block
      {
        margin-top: 0.8rem;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with vertical padding matches its snapshot 1`] = `
<div
  className="y-block"
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          padding-bottom: 2rem;
          padding-top: 2rem;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;

exports[`<Block /> with xLarge text size matches its snapshot 1`] = `
<div
  className=
      y-block
      y-textSize-xLarge
      {
        font-size: 2.2rem;
        line-height: 2.8rem;
      }
>
  <div
    className=
        y-block--inner
        {
          overflow-wrap: break-word;
          word-wrap: break-word;
        }
  >
    block content
  </div>
</div>
`;
